Changes since milestone-03:

* Add detection of CAPATH variable for RedHat installs.
  [Justin Erenkrantz]

* Fix return value in parse_xml_url_info.  [Justin Erenkrantz]

* Fix linking problems due to misordering of libraries on Solaris.
  [Justin Erenkrantz]

* Add config.nice support from apr_common.m4.  [Justin Erenkrantz]

* Add apr_common.m4 and fix up building/configuration of source
  apr/apr-util.  [Justin Erenkrantz]

* Introduce sequence tag to urllist element.  This tag has the following
  form:

  <urllist> 
    <sequence sequencename="myseq" sequencelist="bob, jane, joe">
        <url requesttemplate="http://www.you.com/~${myseq}/" />
        <url requesttemplate="http://www.you.com/~${myseq}/index.html" />
    </sequence>
  </urllist>

    This will hit:
        http://www.you.com/~bob/
        http://www.you.com/~bob/index.html
        http://www.you.com/~jane/
        http://www.you.com/~jane/index.html
        http://www.you.com/~joe/
        http://www.you.com/~joe/index.html

  This allows certain URL patterns to be simplified.  [Justin Erenkrantz]

* Remove shadow declaration of stat in flood_round_robin.c.
  [Justin Erenkrantz]

* Factor out handling of URI XML fields. [Justin Erenkrantz]

* Properly detect and use APR's libtool.  [Justin Erenkrantz]

* Reworked build system to ease integration with APR/apr-util.
  [Justin Erenkrantz]

Changes since milestone-02:

* Updated apr_lock_create to reflect the API change in APR.
  [Aaron Bannert]

* Fix an unterminated string that would produce garbage cookie strings
  when processing multiple cookies.  [Chris Williams <chriwill@cmguc.com>]

* Allow OpenSSL to seed from memory rather than a file if we don't
  have random support.  [Doug MacEachern]

* Allow better detection of randfile and capath options when SSL is 
  enabled.  [Justin Erenkrantz]

* Detect when we have a https URL and don't have SSL support built in.
  [Justin Erenkrantz]
