@@ -1,5 +1,7 @@
 Changes since milestone-03:
 
+* Add chunked support.  [Justin Erenkrantz]
+
 * Add detection of CAPATH variable for RedHat installs.
   [Justin Erenkrantz]
 
